--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: web
 spec:
+  replicas: 10  # Adiciona o número de réplicas aqui
   selector:
     matchLabels:
       app: web
